--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,42 +1,53 @@
+# GitHub Action for generating a contribution graph with a snake eating your contributions.
+
 name: Generate Snake
+
+# Controls when the action will run. This action runs every 6 hours.
 
 on:
   schedule:
+      # every 6 hours
     - cron: "0 */6 * * *"
+
+# This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
 
+# The sequence of runs in this workflow:
 jobs:
+  # This workflow contains a single job called "build"
   build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
 
-      - name: Generate snake
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+
+    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
+      - uses: actions/checkout@v3
+
+    # Generates the snake  
+      - uses: Platane/snk@master
         id: snake-gif
         with:
           github_user_name: gilzon
-        run: |
-          python3 snake.py
-          echo $(cat snake.txt) >> $GITHUB_ENV
-          echo "data_output_name=data" >> $GITHUB_ENV
+          # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
+          gif_out_path: dist/github-contribution-grid-snake.gif
+          svg_out_path: dist/github-contribution-grid-snake.svg
 
-      - name: Show build status
-        run: git status
+     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      - run: git status
 
-      - name: Commit and push changes
-        uses: EndBug/add-and-commit@v8
+      # Push the changes
+      - name: Push changes
+        uses: ad-m/github-push-action@master
         with:
-          message: Add contribution graph with snake
-          author_name: GitHub Actions
-          author_email: actions@github.com
-          signoff: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: master
+          force: true
 
-      - name: Deploy changes to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.1.3
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
+          # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
