--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,14 +3,12 @@
 name: Generate Snake
 
 # Controls when the action will run. This action runs every 6 hours.
-
 on:
   schedule:
-      # every 6 hours
     - cron: "0 */6 * * *"
 
 # This command allows us to run the Action automatically from the Actions tab.
-  workflow_dispatch:
+workflow_dispatch:
 
 # The sequence of runs in this workflow:
 jobs:
@@ -22,19 +20,21 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
 
-    # Checks repo under $GITHUB_WORKSHOP, so your job can access it
-      - uses: actions/checkout@v3
+      # Checks out the repository
+      - uses: actions/checkout@v2
 
-    # Generates the snake  
-      - uses: Platane/snk@master
-        id: snake-gif
+      # Generates the snake  
+      - name: Generate Snake
+        uses: Platane/snk@master
         with:
           github_user_name: gilzon
           # these next 2 lines generate the files on a branch called "output". This keeps the main branch from cluttering up.
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-     # show the status of the build. Makes it easier for debugging (if there's any issues).
+      # Show the status of the build. Makes it easier for debugging (if there's any issues).
       - run: git status
 
       # Push the changes
@@ -45,10 +45,13 @@ jobs:
           branch: master
           force: true
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      # Deploy the changes to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           # the output branch we mentioned above
           target_branch: output
           build_dir: dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
